Made source code of transformation java 8 compilable